--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
         body {
-            background-color: #EAF6F6;
+           background-color: #EAF6F6; 
+            
                 }
            hr {
                border-style:none;
@@ -11,8 +12,12 @@
                width: 5%;
            }
            img {
-               height: 175px;
+               height: 200px;
+               border-radius: 504;
+               width: 200px;
+               background-size: cover;
            }
+
 h1 {
     color: #66BFBF;
 }
@@ -20,3 +25,5 @@ h1 {
 h3 {
     color: #66BFBF;
 }
+
+ 
